working banner section v1.2

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <!-- Section with navbar -->
     <section class="banner-with-navbar">
         <!-- Background shape image -->
-        <img src="./Assets/banner-bg.png" alt="banner-bg-shape" class="banner-bg-shape">
+        <img src="./Assets/Banner Section/Decore.png" alt="banner-bg-decor" class="banner-bg-decor">
         <!-- nav section -->
         <section class="navbarsection">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -24,7 +25,7 @@
                     <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNavDropdown">
                         <div>
                             <a class="nav-link active" aria-current="page" href="#">
-                                <img src="/Assets/Logo.png" alt="logo" class="logo">
+                                <img src="./Assets/Banner Section/Logo.png" alt="logo" class="logo">
                             </a>    
                         </div>
                         <div>
@@ -50,18 +51,21 @@
                 </div>
             </nav>
         </section>
-        <!-- starting custom code not bootstrap -->
+        <!-- starting my custom code not bootstrap -->
         <!-- Banner section -->
         <section class="banner">
+            <!-- Section Left -->
             <div class="banner-left">
             <h1>Travel,<span class="enjoy"> enjoy </span><br>and live a new <br>full life</h1>
             <p>Built Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed listening. Park gate sell they west hard for the.</p>
-            <button class="find-out-more">Find out more</button><button class="play"><img src="" alt=""></button><em></em>
-            <p>Play Demo</p>
+            <button class="find-out-more">Find out more</button><em></em>
+            <img src="./Assets/Banner Section/Play Demo.png" alt="" class="play-demo">
             </div>
+            <!-- Section Right -->
             <div class="banner-right">
-                <img src="./Assets/plane.png" alt="" class="plane1">
-                <img src="" alt="" class="traveler-with-backpack"><img src="" alt="" class="plane2">
+                <img src="./Assets/Banner Section/plane.png" alt="" class="plane1">
+                <img src="./Assets/Banner Section/plane.png" alt="" class="plane2">
+                <img src="./Assets/Banner Section/Traveller image (banner).png" alt="" class="traveler-with-backpack">
             </div>
         </section>
     </section>
