--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Website</title>
     <!-----link css---->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./style.css">
     <!------Link Bootstrap CSS CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Gooogle font -->
@@ -75,11 +75,8 @@
             
             <!-- Section Left -->
             <div class="banner-left">
-            <h1>Travel, <span style="display:inline-block;">
-                <img class="manImg" src="./Assets/Banner Section/Decore.png"></img>
-                enjoy 
-                </span>
-                <br>and live a new <br>full life
+            <h1>Travel,<span class="background-underline-image"> enjoy </span>
+                <br>and live a new <br>and full life
             </h1>
             <p>Built Wicket longer admire do barton vanity itself do in it. Preferred to sportsmen it engrossed listening. Park gate sell they west hard for the.</p>
             
